test_suite/tests/ui/with-variant/skip_ser_whole_variant.stderr
error: variant `Unit` cannot have both #[serde(serialize_with)] and #[serde(skip_serializing)]
  --> $DIR/skip_ser_whole_variant.rs:12:10
   |
12 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

