test_suite/tests/ui/with-variant/skip_ser_whole_variant.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize)]
enum Enum {
    #[serde(serialize_with = "serialize_some_unit_variant")]
    #[serde(skip_serializing)]
    Unit,
}

fn main() {}
